Fixes 100vh on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -5,7 +5,6 @@ body {
 
 .container {
     display: flex;
-    height: 100vh;
     flex-direction: column;
     align-items: center;
 }
